# Lithe

./: .gitignore  Cargo.toml  README.md  fib.lithe  guessing.lithe  main.lithe  primes.lithe  recurse.lithe
benches/: program_benchmarks.rs
src/: lib.rs  main.rs
src/fmc_core/: choice.rs  location.rs  mod.rs  operation.rs  special.rs  term.rs
src/interpreter/: lexer.rs  lithe.rs  mod.rs  parser.rs  rnd.lithe  token.rs
src/machines/: krivine_machine.rs  machine.rs  mod.rs  runtime_io.rs  stack_machine.rs
tests/: ast_roundtrip.rs  program_examples.rs
