[package]
name = "Lithe"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.10"
log = "0.4.29"
miette = { version = "7.6.0", features = ["fancy"] }
rand = "0.9.2"
thiserror = "2.0.18"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "program_benchmarks"
harness = false
